--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
 
     <title>Altura | BSC Gaming NFT platform for Smart NFTs</title>
 
-    <meta name="title" content="Altura | BSC Gaming NFT platform for Smart NFTs" />
-    <meta name="keywords" content="Altura, NFT, gaming, bsc, crypto, alu, smart NFT, videogame, developer, lootbox" />
+    <meta name="title" content="Altura | BSC Gaming NFT Marketplace & Platform for Smart NFTs" />
+    <meta name="keywords" content="Altura, NFT, marketplace, bsc, gaming, nft marketplace, smart NFT, alu, market, nft marketplace on bsc" />
     <meta name="author" content="AlturaNFT" />
-    <meta name="description" content="Altura, a gaming NFT platform on BSC, allows game developers to mint, distribute, transact and integrate Smart NFTs representing in-game items." />
+    <meta name="description" content="Altura, a BSC NFT marketplace and platform, allows game developers to mint, distribute, transact and integrate Smart NFTs representing in-game items." />
 
-    <meta property="og:title" content="Altura | BSC Gaming NFT platform for Smart NFTs" />
-    <meta property="og:description" content="Altura, a gaming NFT platform on BSC, allows game developers to mint, distribute, transact and integrate Smart NFTs representing in-game items. " />
+    <meta property="og:title" content="Altura | BSC Gaming NFT Marketplace & Platform for Smart NFTs" />
+    <meta property="og:description" content="Altura, a BSC NFT marketplace and platform, allows game developers to mint, distribute, transact and integrate Smart NFTs representing in-game items." />
     <meta property="og:image" content="https://i.imgur.com/tgy2hd4.jpeg" />
     <meta property="og:site_name" content="AlturaNFT"/>
 
